lower deep sleep threshold to test sensor when force awake is disabled

--- a/config/boards/shields/ghazal/ghazal.conf
+++ b/config/boards/shields/ghazal/ghazal.conf
@@ -13,7 +13,8 @@ CONFIG_ZMK_KSCAN_DEBOUNCE_RELEASE_MS=5
 # uses very little power, but it may take
 # a few seconds to reconnect after waking.
 # 1.800.000 ms = 30 minutes
-CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=1800000
+#CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=1800000
+CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=120000
 
 # Better compatibility with iPadOS
 CONFIG_ZMK_HID_CONSUMER_REPORT_USAGES_BASIC=y
@@ -33,7 +34,7 @@ CONFIG_PMW3610_INVERT_X=y
 CONFIG_PMW3610_CPI=600
 CONFIG_PMW3610_SCROLL_TICK=30
 CONFIG_PMW3610_POLLING_RATE_125_SW=y
-CONFIG_PMW3610_FORCE_AWAKE=y
+CONFIG_PMW3610_FORCE_AWAKE=n
 
 CONFIG_ZMK_DISPLAY_STATUS_SCREEN_BUILT_IN=y
 CONFIG_ZMK_LV_FONT_DEFAULT_SMALL_MONTSERRAT_26=y
