add mouse click combos on right hand

--- a/config/combos30.dtsi
+++ b/config/combos30.dtsi
@@ -104,9 +104,18 @@ COMBO(btblhdnw, &macro_btblmac, 27 21 22, ALPHA_ALL)
 
 /* GHAZAL trackball combos */
 #ifdef GHAZAL
-  COMBO(LCLICK, &mkp LCLK, 12 22, ALPHA_ALL SCROLL SNIPE)
-  COMBO(RCLICK, &mkp RCLK, 12 20, ALPHA_ALL SCROLL SNIPE)
-  COMBO(MCLICK, &mkp MCLK, 13 20, ALPHA_ALL SCROLL SNIPE)
-  COMBO(SCROLL, SL(SCROLL), 11 22, ALPHA_ALL SCROLL SNIPE)
-  COMBO(SNIPE, &mo SNIPE, 27 11, ALPHA_ALL SCROLL SNIPE)
+
+  /* Left hand mouse */
+  COMBO(L_LCLICK, &mkp LCLK, 12 22, ALPHA_ALL SCROLL SNIPE)
+  COMBO(L_RCLICK, &mkp RCLK, 12 20, ALPHA_ALL SCROLL SNIPE)
+  COMBO(L_MCLICK, &mkp MCLK, 13 20, ALPHA_ALL SCROLL SNIPE)
+  COMBO(L_SCROLL, SL(SCROLL), 11 22, ALPHA_ALL SCROLL SNIPE)
+  COMBO(L_SNIPE, &mo SNIPE, 27 11, ALPHA_ALL SCROLL SNIPE)
+  
+  /* Right hand mouse */
+  COMBO(R_LCLICK, &mkp LCLK, 17 23, ALPHA_ALL SCROLL SNIPE)
+  COMBO(R_RCLICK, &mkp RCLK, 17 25, ALPHA_ALL SCROLL SNIPE)
+  COMBO(R_MCLICK, &mkp MCLK, 13 25, ALPHA_ALL SCROLL SNIPE)
+  COMBO(R_SCROLL, SL(SCROLL), 18 23, ALPHA_ALL SCROLL SNIPE)
+  COMBO(R_SNIPE, &mo SNIPE, 28 18, ALPHA_ALL SCROLL SNIPE)
 #endif
