--- a/config/combos30.dtsi
+++ b/config/combos30.dtsi
@@ -66,7 +66,8 @@ COMBO(undow, &kp LC(Z), 13 14, ALPHA_WIN)
 COMBO(delete_wordw, &kp LC(BACKSPACE), 2 12, NAVW)
 
 /* misc */
-COMBO(esc, &kp ESC, 22 26, ALPHA_ALL)
+COMBO(L_esc, &kp ESC, 22 26, ALPHA_ALL)
+COMBO(R_esc, &kp ESC, 23 29, ALPHA_ALL)
 COMBO(launcher, &kp LG(SPACE), 20 22, ALPHA_ALL)
 COMBO(clipboard_manager, &kp LG(LC(LA(LS(Z)))), 20 21 22, ALPHA_ALL)
 COMBO(key_repeat_r, &key_repeat, 15 23, ALPHA_ALL)
