add home row mouse click combo

--- a/config/combos30.dtsi
+++ b/config/combos30.dtsi
@@ -106,17 +106,32 @@ COMBO(btblhdnw, &macro_btblmac, 27 21 22, ALPHA_ALL)
 /* GHAZAL trackball combos */
 #ifdef GHAZAL
 
+  ╭────────────────────╮ ╭────────────────────╮
+  │  0   1   2   3   4 │ │  5   6   7   8   9 │
+  │ 10  11  12  13  14 │ │ 15  16  17  18  19 │
+  │     20  21  22     │ │     23  24  25     │
+  ╰───────────╮ 26  27 │ │ 28  29 ╭───────────╯
   /* Left hand mouse */
   COMBO(L_LCLICK, &mkp LCLK, 12 22, ALPHA_ALL SCROLL SNIPE)
   COMBO(L_RCLICK, &mkp RCLK, 12 20, ALPHA_ALL SCROLL SNIPE)
   COMBO(L_MCLICK, &mkp MCLK, 13 20, ALPHA_ALL SCROLL SNIPE)
+  COMBO(L_MCLICK2, &mkp MCLK, 13 1, ALPHA_ALL SCROLL SNIPE)
   COMBO(L_SCROLL, SL(SCROLL), 11 22, ALPHA_ALL SCROLL SNIPE)
   COMBO(L_SNIPE, &mo SNIPE, 27 11, ALPHA_ALL SCROLL SNIPE)
+  
+  COMBO(L_LCLICK_HR, &mkp LCLK, 12 13, ALPHA_ALL SCROLL SNIPE)
+  COMBO(L_RCLICK_HR, &mkp RCLK, 12 11, ALPHA_ALL SCROLL SNIPE)
+  COMBO(L_MCLICK_HR, &mkp MCLK, 13 11, ALPHA_ALL SCROLL SNIPE)
+  
+  COMBO(R_LCLICK_HR, &mkp LCLK, 17 16, ALPHA_ALL SCROLL SNIPE)
+  COMBO(R_RCLICK_HR, &mkp RCLK, 17 18, ALPHA_ALL SCROLL SNIPE)
+  COMBO(R_MCLICK_HR, &mkp MCLK, 16 18, ALPHA_ALL SCROLL SNIPE)
   
   /* Right hand mouse */
   COMBO(R_LCLICK, &mkp LCLK, 17 23, ALPHA_ALL SCROLL SNIPE)
   COMBO(R_RCLICK, &mkp RCLK, 17 25, ALPHA_ALL SCROLL SNIPE)
   COMBO(R_MCLICK, &mkp MCLK, 16 25, ALPHA_ALL SCROLL SNIPE)
+  COMBO(R_MCLICK2, &mkp MCLK, 16 8, ALPHA_ALL SCROLL SNIPE)
   COMBO(R_SCROLL, SL(SCROLL), 18 23, ALPHA_ALL SCROLL SNIPE)
   COMBO(R_SNIPE, &mo SNIPE, 28 18, ALPHA_ALL SCROLL SNIPE)
 #endif
