enable soft off config

--- a/config/boards/shields/ghazal/ghazal.conf
+++ b/config/boards/shields/ghazal/ghazal.conf
@@ -23,6 +23,8 @@ CONFIG_ZMK_COMBO_MAX_COMBOS_PER_KEY=20
 
 CONFIG_ZMK_BLE_EXPERIMENTAL_FEATURES=y
 
+CONFIG_ZMK_PM_SOFT_OFF=y
+
 # zmk mouse emulation
 CONFIG_SPI=y
 CONFIG_INPUT=y
