--- a/config/combos30.dtsi
+++ b/config/combos30.dtsi
@@ -110,27 +110,19 @@ COMBO(softoff, &soft_off, 0 1 2 3, ALPHA_ALL)
 #ifdef GHAZAL
 
   /* Left hand mouse */
-  COMBO(L_LCLICK, &mkp LCLK, 12 22, ALPHA_ALL SCROLL SNIPE)
-  COMBO(L_RCLICK, &mkp RCLK, 12 20, ALPHA_ALL SCROLL SNIPE)
-  COMBO(L_MCLICK, &mkp MCLK, 13 20, ALPHA_ALL SCROLL SNIPE)
-  COMBO(L_MCLICK2, &mkp MCLK, 13 1, ALPHA_ALL SCROLL SNIPE)
-  COMBO(L_SCROLL, SL(SCROLL), 11 22, ALPHA_ALL SCROLL SNIPE)
-  COMBO(L_SNIPE, &mo SNIPE, 27 11, ALPHA_ALL SCROLL SNIPE)
-  
   COMBO(L_LCLICK_HR, &mkp LCLK, 12 13, ALPHA_ALL SCROLL SNIPE)
   COMBO(L_RCLICK_HR, &mkp RCLK, 12 11, ALPHA_ALL SCROLL SNIPE)
   COMBO(L_MCLICK_HR, &mkp MCLK, 13 11, ALPHA_ALL SCROLL SNIPE)
+  COMBO(L_SCROLL, SL(SCROLL), 12 20, ALPHA_ALL SCROLL SNIPE)
+  COMBO(L_SCROLL2, SL(SCROLL), 12 22, ALPHA_ALL SCROLL SNIPE)
+  COMBO(L_SNIPE, &mo SNIPE, 27 11, ALPHA_ALL SCROLL SNIPE)
   
+  /* Right hand mouse */
   COMBO(R_LCLICK_HR, &mkp LCLK, 17 16, ALPHA_ALL SCROLL SNIPE)
   COMBO(R_RCLICK_HR, &mkp RCLK, 17 18, ALPHA_ALL SCROLL SNIPE)
   COMBO(R_MCLICK_HR, &mkp MCLK, 16 18, ALPHA_ALL SCROLL SNIPE)
-  
-  /* Right hand mouse */
-  COMBO(R_LCLICK, &mkp LCLK, 17 23, ALPHA_ALL SCROLL SNIPE)
-  COMBO(R_RCLICK, &mkp RCLK, 17 25, ALPHA_ALL SCROLL SNIPE)
-  COMBO(R_MCLICK, &mkp MCLK, 16 25, ALPHA_ALL SCROLL SNIPE)
-  COMBO(R_MCLICK2, &mkp MCLK, 16 8, ALPHA_ALL SCROLL SNIPE)
-  COMBO(R_SCROLL, SL(SCROLL), 18 23, ALPHA_ALL SCROLL SNIPE)
+  COMBO(R_SCROLL, SL(SCROLL), 17 23, ALPHA_ALL SCROLL SNIPE)
+  COMBO(R_SCROLL2, SL(SCROLL), 17 25, ALPHA_ALL SCROLL SNIPE)
   COMBO(R_SNIPE, &mo SNIPE, 28 18, ALPHA_ALL SCROLL SNIPE)
   
 #endif
