add snipe layer toggle combo because Why not!

--- a/config/combos30.dtsi
+++ b/config/combos30.dtsi
@@ -125,4 +125,6 @@ COMBO(softoff, &soft_off, 0 1 2 3, ALPHA_ALL)
   COMBO(R_SCROLL2, SL(SCROLL), 17 25, ALPHA_ALL SCROLL SNIPE)
   COMBO(R_SNIPE, &mo SNIPE, 28 18, ALPHA_ALL SCROLL SNIPE)
   
+  COMBO(TOG_SNIPE, &tog SNIPE, 32 33, ALPHA_ALL SCROLL SNIPE)
+  
 #endif
