--- a/config/combos30.dtsi
+++ b/config/combos30.dtsi
@@ -114,7 +114,7 @@ COMBO(softoff, &soft_off, 0 1 2 3, ALPHA_ALL)
   COMBO(L_RCLICK_HR, &mkp RCLK, 12 11, ALPHA_ALL SCROLL SNIPE)
   COMBO(L_MCLICK_HR, &mkp MCLK, 13 11, ALPHA_ALL SCROLL SNIPE)
   COMBO(L_SCROLL, SL(SCROLL), 12 20, ALPHA_ALL SCROLL SNIPE)
-  COMBO(L_SCROLL2, SL(SCROLL), 12 22, ALPHA_ALL SCROLL SNIPE)
+  COMBO(L_SCROLL2, SL(SCROLL), 11 12 13, ALPHA_ALL SCROLL SNIPE)
   COMBO(L_SNIPE, &mo SNIPE, 27 11, ALPHA_ALL SCROLL SNIPE)
   
   /* Right hand mouse */
@@ -122,7 +122,7 @@ COMBO(softoff, &soft_off, 0 1 2 3, ALPHA_ALL)
   COMBO(R_RCLICK_HR, &mkp RCLK, 17 18, ALPHA_ALL SCROLL SNIPE)
   COMBO(R_MCLICK_HR, &mkp MCLK, 16 18, ALPHA_ALL SCROLL SNIPE)
   COMBO(R_SCROLL, SL(SCROLL), 17 23, ALPHA_ALL SCROLL SNIPE)
-  COMBO(R_SCROLL2, SL(SCROLL), 17 25, ALPHA_ALL SCROLL SNIPE)
+  COMBO(R_SCROLL2, SL(SCROLL), 16 17 18, ALPHA_ALL SCROLL SNIPE)
   COMBO(R_SNIPE, &mo SNIPE, 28 18, ALPHA_ALL SCROLL SNIPE)
   
   COMBO(TOG_SNIPE, &tog SNIPE, 32 33, ALPHA_ALL SCROLL SNIPE)
