Better config for PMW rest?

--- a/config/boards/shields/ghazal/ghazal.conf
+++ b/config/boards/shields/ghazal/ghazal.conf
@@ -25,6 +25,12 @@ CONFIG_ZMK_BLE_EXPERIMENTAL_FEATURES=y
 
 CONFIG_ZMK_PM_SOFT_OFF=y
 
+# nice!view default widget
+CONFIG_ZMK_DISPLAY_STATUS_SCREEN_BUILT_IN=y
+CONFIG_ZMK_LV_FONT_DEFAULT_SMALL_MONTSERRAT_26=y
+CONFIG_LV_FONT_DEFAULT_MONTSERRAT_26=y
+CONFIG_ZMK_WIDGET_BATTERY_STATUS_SHOW_PERCENTAGE=y
+
 # zmk mouse emulation
 CONFIG_SPI=y
 CONFIG_INPUT=y
@@ -37,8 +43,10 @@ CONFIG_PMW3610_CPI=600
 CONFIG_PMW3610_SCROLL_TICK=30
 CONFIG_PMW3610_POLLING_RATE_125_SW=y
 CONFIG_PMW3610_FORCE_AWAKE=n
-
-CONFIG_ZMK_DISPLAY_STATUS_SCREEN_BUILT_IN=y
-CONFIG_ZMK_LV_FONT_DEFAULT_SMALL_MONTSERRAT_26=y
-CONFIG_LV_FONT_DEFAULT_MONTSERRAT_26=y
-CONFIG_ZMK_WIDGET_BATTERY_STATUS_SHOW_PERCENTAGE=y
+# PMW3610 better power consumption?
+CONFIG_PMW3610_RUN_DOWNSHIFT_TIME_MS=128
+CONFIG_PMW3610_REST1_DOWNSHIFT_TIME_MS=5000
+CONFIG_PMW3610_REST2_DOWNSHIFT_TIME_MS=17000
+CONFIG_PMW3610_REST1_SAMPLE_TIME_MS=40
+CONFIG_PMW3610_REST2_SAMPLE_TIME_MS=100
+CONFIG_PMW3610_REST3_SAMPLE_TIME_MS=500
