--- a/config/boards/shields/ghazal/ghazal.conf
+++ b/config/boards/shields/ghazal/ghazal.conf
@@ -43,10 +43,10 @@ CONFIG_PMW3610_CPI=600
 CONFIG_PMW3610_SCROLL_TICK=30
 CONFIG_PMW3610_POLLING_RATE_125_SW=y
 CONFIG_PMW3610_FORCE_AWAKE=n
-# PMW3610 better power consumption?
-CONFIG_PMW3610_RUN_DOWNSHIFT_TIME_MS=128
-CONFIG_PMW3610_REST1_DOWNSHIFT_TIME_MS=5000
-CONFIG_PMW3610_REST2_DOWNSHIFT_TIME_MS=17000
-CONFIG_PMW3610_REST1_SAMPLE_TIME_MS=40
-CONFIG_PMW3610_REST2_SAMPLE_TIME_MS=100
-CONFIG_PMW3610_REST3_SAMPLE_TIME_MS=500
+# # PMW3610 better power consumption?
+# CONFIG_PMW3610_RUN_DOWNSHIFT_TIME_MS=128
+# CONFIG_PMW3610_REST1_DOWNSHIFT_TIME_MS=5000
+# CONFIG_PMW3610_REST2_DOWNSHIFT_TIME_MS=17000
+# CONFIG_PMW3610_REST1_SAMPLE_TIME_MS=40
+# CONFIG_PMW3610_REST2_SAMPLE_TIME_MS=100
+# CONFIG_PMW3610_REST3_SAMPLE_TIME_MS=500
