--- a/config/boards/shields/ghazal/ghazal.conf
+++ b/config/boards/shields/ghazal/ghazal.conf
@@ -23,7 +23,7 @@ CONFIG_ZMK_COMBO_MAX_COMBOS_PER_KEY=20
 
 CONFIG_ZMK_BLE_EXPERIMENTAL_FEATURES=y
 
-CONFIG_ZMK_PM_SOFT_OFF=n
+CONFIG_ZMK_PM_SOFT_OFF=y
 
 # nice!view default widget
 CONFIG_ZMK_DISPLAY_STATUS_SCREEN_BUILT_IN=y
@@ -41,7 +41,8 @@ CONFIG_PMW3610_ORIENTATION_270=y
 CONFIG_PMW3610_INVERT_X=y
 CONFIG_PMW3610_CPI=600
 CONFIG_PMW3610_SCROLL_TICK=30
-CONFIG_PMW3610_POLLING_RATE_125_SW=y
+# CONFIG_PMW3610_POLLING_RATE_125_SW=y
+CONFIG_PMW3610_POLLING_RATE_250=y
 CONFIG_PMW3610_FORCE_AWAKE=n
 # # PMW3610 better power consumption?
 # CONFIG_PMW3610_RUN_DOWNSHIFT_TIME_MS=128
