--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,6 +1,7 @@
 name: Reusable user config build
 
 on:
+  [push, pull_request, workflow_dispatch]
   workflow_call:
     inputs:
       build_matrix_path:
