--- a/config/west.yml
+++ b/config/west.yml
@@ -11,7 +11,7 @@ manifest:
   projects:
     - name: zmk
       remote: petejohanson
-      revision: feat/pointers-move-scroll
+      revision: d45cb3c26fc113357dfc035965e51c84e13e218d #pmw3610 trackball issue
       import: app/west.yml
     - name: chiptuner-zmk-module
       remote: petejohanson
