--- a/config/west.yml
+++ b/config/west.yml
@@ -11,8 +11,8 @@ manifest:
   projects:
     - name: zmk
       remote: petejohanson
-      revision: dbbeb701aee215fbd5f5e9faecc778b745d4cf87 #pmw3610 trackball issue
-      # revision: feat/pointers-move-scroll
+      # revision: dbbeb701aee215fbd5f5e9faecc778b745d4cf87 #pmw3610 trackball issue
+      revision: feat/pointers-move-scroll
       import: app/west.yml
     - name: chiptuner-zmk-module
       remote: petejohanson
