--- a/build.yaml
+++ b/build.yaml
@@ -20,6 +20,7 @@ include:
     shield: wasfoora
   - board: nice_nano_v2
     shield: ghazal nice_view
+    snippet: zmk-usb-logging
   - board: seeeduino_xiao_ble
     shield: rommana_left rgbled_widget
   - board: seeeduino_xiao_ble
