--- a/config/boards/shields/ghazal/ghazal.conf
+++ b/config/boards/shields/ghazal/ghazal.conf
@@ -43,6 +43,10 @@ CONFIG_PMW3610_CPI=600
 CONFIG_PMW3610_SCROLL_TICK=30
 CONFIG_PMW3610_POLLING_RATE_125_SW=y
 CONFIG_PMW3610_FORCE_AWAKE=y
+
+# logging
+CONFIG_LOG_PROCESS_THREAD_STARTUP_DELAY_MS=8000
+
 # # PMW3610 better power consumption?
 # CONFIG_PMW3610_RUN_DOWNSHIFT_TIME_MS=128
 # CONFIG_PMW3610_REST1_DOWNSHIFT_TIME_MS=5000
