--- a/config/boards/shields/wasfoora/wasfoora.conf
+++ b/config/boards/shields/wasfoora/wasfoora.conf
@@ -19,3 +19,7 @@ CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=1800000
 CONFIG_ZMK_HID_CONSUMER_REPORT_USAGES_BASIC=y
 
 CONFIG_ZMK_COMBO_MAX_COMBOS_PER_KEY=20
+
+CONFIG_ZMK_BLE_EXPERIMENTAL_FEATURES=y
+CONFIG_INPUT=y
+CONFIG_ZMK_MOUSE=y
