--- a/config/combos30.dtsi
+++ b/config/combos30.dtsi
@@ -114,7 +114,7 @@ COMBO(softoff, &soft_off, 0 1 2 3, ALPHA_ALL)
 /* GHAZAL trackball combos */
 
 #ifdef WASFOORA
-COMBO(L_LCLICK_HR_WASFOORA, &mkp LCLK, 12 13, ALPHA_ALL SCROLL SNIPE)
+COMBO(L_LCLICK_HR_WASFOORA, &mkp LCLK, 12 13, ALPHA_ALL)
 #endif
 
 #ifdef GHAZAL
