--- a/config/boards/shields/ghazal/ghazal.conf
+++ b/config/boards/shields/ghazal/ghazal.conf
@@ -45,7 +45,7 @@ CONFIG_PMW3610_POLLING_RATE_125_SW=y
 CONFIG_PMW3610_FORCE_AWAKE=y
 
 # logging
-CONFIG_LOG_PROCESS_THREAD_STARTUP_DELAY_MS=8000
+# CONFIG_LOG_PROCESS_THREAD_STARTUP_DELAY_MS=8000
 
 # # PMW3610 better power consumption?
 # CONFIG_PMW3610_RUN_DOWNSHIFT_TIME_MS=128
