remove unkown config

--- a/config/boards/shields/ghazal/ghazal.conf
+++ b/config/boards/shields/ghazal/ghazal.conf
@@ -37,11 +37,13 @@ CONFIG_INPUT=y
 CONFIG_ZMK_MOUSE=y
 CONFIG_PMW3610=y
 CONFIG_PMW3610_SMART_ALGORITHM=y
-CONFIG_PMW3610_ORIENTATION_270=y
+CONFIG_PMW3610_SWAP_XY=y
 CONFIG_PMW3610_INVERT_X=y
-CONFIG_PMW3610_SCROLL_TICK=30
-CONFIG_PMW3610_POLLING_RATE_125_SW=y
-CONFIG_PMW3610_FORCE_AWAKE=y
+
+# CONFIG_PMW3610_ORIENTATION_270=y
+# CONFIG_PMW3610_SCROLL_TICK=30
+# CONFIG_PMW3610_POLLING_RATE_125_SW=y
+# CONFIG_PMW3610_FORCE_AWAKE=y
 
 # logging
 # CONFIG_LOG_PROCESS_THREAD_STARTUP_DELAY_MS=8000
