--- a/config/boards/shields/ghazal/ghazal.conf
+++ b/config/boards/shields/ghazal/ghazal.conf
@@ -38,11 +38,7 @@ CONFIG_ZMK_MOUSE=y
 CONFIG_PMW3610=y
 CONFIG_PMW3610_SMART_ALGORITHM=y
 CONFIG_PMW3610_SWAP_XY=y
-
-# CONFIG_PMW3610_ORIENTATION_270=y
-# CONFIG_PMW3610_SCROLL_TICK=30
-# CONFIG_PMW3610_POLLING_RATE_125_SW=y
-# CONFIG_PMW3610_FORCE_AWAKE=y
+CONFIG_PMW3610_RUN_DOWNSHIFT_TIME_MS=2000000
 
 # logging
 # CONFIG_LOG_PROCESS_THREAD_STARTUP_DELAY_MS=8000
