--- a/config/west.yml
+++ b/config/west.yml
@@ -4,10 +4,10 @@ manifest:
       url-base: https://github.com/zmkfirmware
     - name: petejohanson
       url-base: https://github.com/petejohanson
-    # - name: inorichi
-    #   url-base: https://github.com/inorichi
-    - name: badjeff
-      url-base: https://github.com/badjeff
+    - name: inorichi
+      url-base: https://github.com/inorichi
+    # - name: badjeff
+    #   url-base: https://github.com/badjeff
   projects:
     - name: zmk
       remote: petejohanson
@@ -17,15 +17,15 @@ manifest:
     - name: chiptuner-zmk-module
       remote: petejohanson
       revision: main
-    # - name: zmk-pmw3610-driver
-    #   remote: inorichi
-    #   revision: main
     - name: zmk-pmw3610-driver
-      remote: badjeff
+      remote: inorichi
       revision: main
-    - name: zmk-input-behavior-listener
-      remote: badjeff
-      revision: main
+    # - name: zmk-pmw3610-driver
+    #   remote: badjeff
+    #   revision: main
+    # - name: zmk-input-behavior-listener
+    #   remote: badjeff
+    #   revision: main
     # replace the one above with the commented one below when it gets merged into zmk
     # must swap the zmk-fingerpunch-keyboards repo as well at the same time
     # - name: zmk
