use my fork with working branch for windows 10 pmw3610

--- a/config/west.yml
+++ b/config/west.yml
@@ -6,13 +6,18 @@ manifest:
       url-base: https://github.com/petejohanson
     - name: inorichi
       url-base: https://github.com/inorichi
+    - name: AlaaSaadAbdo
+      url-base: https://github.com/AlaaSaadAbdo
     # - name: badjeff
     #   url-base: https://github.com/badjeff
   projects:
-    - name: zmk
-      remote: petejohanson
-      revision: dbbeb701aee215fbd5f5e9faecc778b745d4cf87 #pmw3610 trackball issue
+    # - name: zmk
+    #   remote: petejohanson
+    #   revision: dbbeb701aee215fbd5f5e9faecc778b745d4cf87 #pmw3610 trackball issue
       # revision: feat/pointers-move-scroll
+    - name: zmk
+      remote: AlaaSaadAbdo
+      revision: windows-10-pmw3610-pointer
       import: app/west.yml
     - name: chiptuner-zmk-module
       remote: petejohanson
