try mouse acceleration driver

--- a/config/boards/shields/ghazal/ghazal.conf
+++ b/config/boards/shields/ghazal/ghazal.conf
@@ -43,6 +43,8 @@ CONFIG_PMW3610_CPI=500
 CONFIG_PMW3610_SCROLL_TICK=35
 CONFIG_PMW3610_POLLING_RATE_125_SW=y
 CONFIG_PMW3610_FORCE_AWAKE=y
+CONFIG_PMW3610_MACCEL=y
+CONFIG_PMW3610_CPI_DIVIDOR=1
 
 # logging
 # CONFIG_LOG_PROCESS_THREAD_STARTUP_DELAY_MS=8000
