--- a/config/west.yml
+++ b/config/west.yml
@@ -10,6 +10,8 @@ manifest:
       url-base: https://github.com/AlaaSaadAbdo
     # - name: badjeff
     #   url-base: https://github.com/badjeff
+    - name: charlesmst
+    - url-base: https://github.com/charlesmst
   projects:
     # - name: zmk
     #   remote: petejohanson
@@ -22,8 +24,11 @@ manifest:
     - name: chiptuner-zmk-module
       remote: petejohanson
       revision: main
+    # - name: zmk-pmw3610-driver
+    #   remote: inorichi
+    #   revision: main
     - name: zmk-pmw3610-driver
-      remote: inorichi
+      remote: charlesmst
       revision: main
     # - name: zmk-pmw3610-driver
     #   remote: badjeff
