--- a/config/boards/shields/ghazal/ghazal.conf
+++ b/config/boards/shields/ghazal/ghazal.conf
@@ -45,6 +45,7 @@ CONFIG_PMW3610_POLLING_RATE_125_SW=y
 CONFIG_PMW3610_FORCE_AWAKE=y
 CONFIG_PMW3610_MACCEL=y
 CONFIG_PMW3610_CPI_DIVIDOR=1
+CONFIG_PMW3610_MACCEL_GROWTH_RATE=050
 
 # logging
 # CONFIG_LOG_PROCESS_THREAD_STARTUP_DELAY_MS=8000
