--- a/config/boards/shields/ghazal/ghazal.conf
+++ b/config/boards/shields/ghazal/ghazal.conf
@@ -43,6 +43,8 @@ CONFIG_PMW3610_CPI=700
 CONFIG_PMW3610_SCROLL_TICK=50
 CONFIG_PMW3610_POLLING_RATE_125_SW=y
 CONFIG_PMW3610_FORCE_AWAKE=y
+
+# pointing acceleration driver: https://github.com/charlesmst/zmk-pmw3610-driver
 CONFIG_PMW3610_MACCEL=y
 CONFIG_PMW3610_CPI_DIVIDOR=1
 CONFIG_PMW3610_MACCEL_OFFSET=075
