--- a/keymap-drawer.yml
+++ b/keymap-drawer.yml
@@ -28,7 +28,7 @@ layers:
     - ENTER
     - BCK SPCE
     - TAB
-    - 'Nav'
+    - {type: held}
     - 'SPACE'
     - 'SHIFT'
     - 'Sym'
@@ -62,144 +62,7 @@ layers:
     - 'Nav'
     - 'SPACE'
     - 'SHIFT'
-    - 'Sym'
-combos:
--   p: [21, 22]
-    k: Q
-    l: [BASE]
--   p: [1, 2]
-    k: Z
-    l: [BASE]
--   p: [20, 21]
-    k: V
-    l: [BASE]
--   p: [1, 11]
-    k: '['
-    l: [BASE]
--   p: [8, 18]
-    k: ']'
-    l: [BASE]
--   p: [2, 12]
-    k: '('
-    l: [BASE]
--   p: [7, 17]
-    k: ')'
-    l: [BASE]
--   p: [3, 13]
-    k: '{'
-    l: [BASE]
--   p: [6, 16]
-    k: '}'
-    l: [BASE]
--   p: [27, 28]
-    k: Caps
-    l: [BASE]
-    d: true
--   p: [3, 4]
-    k: Redo
-    l: [BASE]
-    r: 45
--   p: [13, 14]
-    k: Undo
-    l: [BASE]
-    r: 45
--   p: [22, 26]
-    k: ESC
-    l: [BASE]
--   p: [6, 7, 8]
-    k: Lock Screen
-    l: [NAV]
-    align: top
-    o: .25
-    w: 45
--   p: [26, 27]
-    k: Sym
-    l: [BASE]
-    hidden: true
--   p: [0, 14]
-    k: Bluetooth Clear
-    l: [NAV]
-    a: top
-    o: .75
-    w: 65
--   p: [0, 1]
-    k: BT 0
-    l: [NAV]
-    r: -45
--   p: [1, 2]
-    k: BT 1
-    l: [NAV]
--   p: [2, 3]
-    k: BT 2
-    l: [NAV]
--   p: [3, 4]
-    k: BT 3
-    l: [NAV]
-    r: 45
-layers:
-    BASE: [W, F, M, P, B, ',', X, '"', J, K, R, S, N, T, G, ., A, E, I, H, C, L, D, U, O, Y, 'Nav', SPACE, {t: 'SHIFT', h: 'Sticky'}, 'Sym']
-    NAV:
-    - Scrn Sht
-    - ENTER
-    - BCK SPCE
-    - TAB
-    - DELETE
-    - Delete Word
-    - Rename
-    - UP
-    - Quit
-    - WRK1
-    - {t: LCTRL, h: Sticky}
-    - {t: LALT, h: Sticky}
-    - {t: LGUI, h: Sticky}
-    - {t: LSHIFT, h: Sticky}
-    - Select All
-    - Select All
-    - LEFT
-    - DOWN
-    - RIGHT
-    - WRK2
-    - CUT
-    - COPY
-    - PASTE
-    - ENTER
-    - BCK SPCE
-    - TAB
-    - 'Nav'
-    - 'SPACE'
-    - 'SHIFT'
-    - 'Sym'
-    SYM:
-    - '~'
-    - '9'
-    - '8'
-    - '7'
-    - '='
-    - ','
-    - ;
-    - ''''
-    - \
-    - '`'
-    - '3'
-    - '2'
-    - '1'
-    - '0'
-    - '-'
-    - .
-    - {t: LSHIFT, h: Sticky}
-    - {t: LGUI, h: Sticky}
-    - {t: RALT, h: Sticky}
-    - {t: LCTRL, h: Stikcy}
-    - '6'
-    - '5'
-    - '4'
-    - '?'
-    - '!'
-    - /
-    - 'Nav'
-    - 'SPACE'
-    - 'SHIFT'
-    - 'Sym'
+    - {type: held}
 combos:
 -   p: [21, 22]
     k: Q
